# puzzpool

./: .env.example  .eslintrc.js  .gitignore  .gitmodules  .gitonator-pr-guard-test.md  BINGO_FOUND_KEYS.txt  CMakeLists.txt  README.md  build.sh  changes.patch  deps.txt  package-lock.json  package.json  server.js  server.js.orig  test.sh  update-deps.sh  update.sh
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_idea.yml  feature_request.md  implementation.md
.github/archived_issue_templates/2026-07-07/: bug_report.md
.github/workflows/: analyze-bug.yml  approve-feature.yml  cd.yml  ci.yml  confirm-fix.yml  docs-check.yml  refine-feature.yml
deploy/: nginx-test.conf  nginx.conf  puzzpool-test.service  puzzpool.service
docs/: api.md  architecture-review.md  architecture.md  database.md  security.md  testing.md
docs/superpowers/plans/: 2026-07-01-scores-last-seen-column.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: accessibility.test.ts  api.ts  canvas.ts  dashboard.ts  format.test.ts  format.ts  performance.test.ts  types.ts
include/puzzpool/: allocator.hpp  config.hpp  db.hpp  env.hpp  hash_utils.hpp  hex_bigint.hpp  permutation.hpp  puzzle_status.hpp  service.hpp  submission_service.hpp  types.hpp  work_service.hpp
public/: index.html
review/: 2026-05-23-ad-hoc-frontend-modern-web.md  2026-05-23-ad-hoc-puzzle-status-badges.md  2026-05-23-complexity-analysis.md  2026-05-23-tab-switching-slowdown-root-cause.md  2026-05-24-issue-101-db-indexes-fix-review.md  2026-05-24-issue-101-followup-and-db-performance.md  2026-05-24-issue-101-visualization-architecture-redesign.md  2026-07-01-issue-107-pr-0-scores-last-seen-plan-recheck.md  2026-07-01-issue-107-pr-0-scores-last-seen-plan-review.md  2026-07-01-issue-107-pr-108-scores-last-seen-column.md  2026-07-07-issue-115-pr-116-sticky-columns-background.md
scripts/: check-node-version-age.sh  puzzle71_completed_chunks_migration.sql  puzzle71_completed_chunks_stats.sh
src/: allocator.cpp  config.cpp  db.cpp  env.cpp  hash_utils.cpp  hex_bigint.cpp  main.cpp  permutation.cpp  puzzle_status.cpp  service.cpp  service_admin.cpp  service_bootstrap.cpp  service_puzzle_status.cpp  service_serialization.cpp  service_stats.cpp  service_submit.cpp  service_visualization.cpp  service_work.cpp  submission_service.cpp  work_service.cpp
test/: helpers.js  server.test.js
tests/: CMakeLists.txt  test_allocator.cpp  test_check_node_version_age.sh  test_config.cpp  test_handler_validation.cpp  test_helpers.hpp  test_hex_bigint.cpp  test_permutation.cpp  test_puzzle_status.cpp  test_submission.cpp  test_vchunk.cpp  test_visualization.cpp
